Updated HTML and CSS files
Removed and updated the alt texts given to the star rating images. Changed some values of the CSS property to get the design right.

--- a/index.html
+++ b/index.html
@@ -38,33 +38,33 @@
         <article class="article2">
           <div class="ratings r1">
             <div class="stars">
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg"  alt="5 stars"/>
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
             </div>
             <div class="rating_description">Rated 5 Stars in Reviews</div>
           </div>
 
           <div class="ratings r2">
             <div class="stars">
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg"  alt="5 stars"/>
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
             </div>
             <div class="rating_description">Rated 5 Stars Report Guru</div>
           </div>
           
           <div class="ratings r3">
             <div class="stars">
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
-              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg"  alt="5 stars"/>
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
+              <img src="./images/icon-star.svg"  />
             </div>
             <div class="rating_description">Rated 5 Stars in BestTech</div>
           </div>
